Movie Clip Editor - frame indicator/controller is not displayed #91160

Closed
opened 2021-09-03 12:46:03 +02:00 by Terry Edhouse · 10 comments

System Information
Operating system: Linux-4.15.0-142-generic-x86_64-with-glibc2.23 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.24.02

Blender Version
Broken: version: 2.93.4, branch: master, commit date: 2021-08-31 09:23, hash: b7205031ce
Worked: 2.83.17

Short description of error
The frame indicator/controller is not displayed when in the Graph or Dopesheet view of the Movie Clip Editor

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

1 - Start blender 2.93.4

2 - Load Factory Settings

3 - Switch to the Movie Clip Editor

4 - Select Graph or Dopesheet view

5 - There is no frame indicator/controller displayed but dragging the mouse along the frame bar at the top does cause the frame to change (as indicated by the vertical line moving). The current frame in the Timeline Editor is also kept in sync.

**System Information** Operating system: Linux-4.15.0-142-generic-x86_64-with-glibc2.23 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.24.02 **Blender Version** Broken: version: 2.93.4, branch: master, commit date: 2021-08-31 09:23, hash: `b7205031ce` Worked: 2.83.17 **Short description of error** The frame indicator/controller is not displayed when in the Graph or Dopesheet view of the Movie Clip Editor **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] 1 - Start blender 2.93.4 2 - Load Factory Settings 3 - Switch to the Movie Clip Editor 4 - Select Graph or Dopesheet view 5 - There is no frame indicator/controller displayed but dragging the mouse along the frame bar at the top does cause the frame to change (as indicated by the vertical line moving). The current frame in the Timeline Editor is also kept in sync.
Author

Added subscriber: @MrTez

Added subscriber: @MrTez
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscriber: @Aidan_Davey

Added subscriber: @Aidan_Davey

We could call the function ED_time_scrub_draw_current_frame in clip_draw_dopesheet_main and graph_region_draw in space_clip.c

space-clip-graph-dope-show-current-frame).diff

This is my first patch so apologies if anything isn't right,

We could call the function ED_time_scrub_draw_current_frame in clip_draw_dopesheet_main and graph_region_draw in space_clip.c [space-clip-graph-dope-show-current-frame).diff](https://archive.blender.org/developer/F10406239/space-clip-graph-dope-show-current-frame_.diff) This is my first patch so apologies if anything isn't right,
Aidan Davey self-assigned this 2021-09-13 13:54:00 +02:00
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member
@Aidan_Davey can you submit the patch as described here: https://wiki.blender.org/wiki/Process/Contributing_Code#Submitting_the_Patch

Hi @Blendify , appreciate the direction, I think I did it and hopefully you were added as a subscriber. Thanks for your patience!

Hi @Blendify , appreciate the direction, I think I did it and hopefully you were added as a subscriber. Thanks for your patience!

This issue was referenced by 325beef7af

This issue was referenced by 325beef7af93531e52cb512485ef7baec49e235c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91160
No description provided.